ZCS-6769 Changes for JDK 11